# hpgeom

./: .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package-pr.yml  python-package-publish.yml  python-package-push.yml  python-package.yml
docs/: basic_interface.rst  conf.py  index.rst  install.rst  modules.rst
hpgeom/: __init__.py  healpix_geom.c  healpix_geom.h  healpy_compat.py  hpgeom.c  hpgeom.py  hpgeom_stack.c  hpgeom_stack.h  hpgeom_utils.c  hpgeom_utils.h  thread_compat.h
tests/: make_benchmark_table.py  test_angle_functions.py  test_angle_to_pixel.py  test_boundaries.py  test_healpy_compat.py  test_interpolation.py  test_max_pixel_radius.py  test_neighbors.py  test_nest_to_ring.py  test_nsidenpixel.py  test_pixel_functions.py  test_pixel_ranges.py  test_pixel_to_angle.py  test_pixel_to_vector.py  test_query_box.py  test_query_circle.py  test_query_ellipse.py  test_query_polygon.py  test_ring_to_nest.py  test_upgrade_pixels.py  test_vector_functions.py  test_vector_to_pixel.py  utils.py
